# bakalarska_praca

./: CMakeLists.txt  README.md  main.cpp
include/events/: calendar.h  event.h  events_google.h  events_ms.h  google_sync.h
include/oauth/: oauth_google.h  oauth_ms.h  oauth_utils.h
include/utils/: access_token.h  crypto.h  http.h  types.h  url_parser.h
src/events/: calendar.cpp  event.cpp  events_google.cpp  events_ms.cpp  google_sync.cpp
src/oauth/: oauth_google.cpp  oauth_ms.cpp  oauth_utils.cpp
src/utils/: access_token.cpp  crypto.cpp  http.cpp  url_parser.cpp
